# openai-http

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  config.toml  main.py  mock_backend.py  pyproject.toml  requirements.txt  test_client.py
.github/workflows/: lint.yml  test.yml
.opencode/skills/custom-backend/: SKILL.md
docs/superpowers/plans/: 2026-07-07-paged-kv-cache.md
docs/superpowers/specs/: 2026-07-07-paged-kv-cache-design.md
examples/onnxruntime-backend/: README.md  onnxruntime_backend.py
examples/transformers-backend/: README.md  lfm_parser.py  qwen_parser.py  transformers_backend.py
openai_http/: __init__.py  __main__.py  _logging.py  _server.py  _validation.py  app.py  auth.py  config.py  errors.py  queue.py
openai_http/backends/: __init__.py  base.py  contract.py  mock_backend.py  types.py
openai_http/kvcache/: __init__.py  radix.py  types.py
openai_http/observability/: __init__.py  logging.py  metrics.py
openai_http/parser/: __init__.py  base.py  cpm.py  lfm.py  qwen.py
openai_http/routers/: __init__.py  audio.py  chat.py  completions.py  embeddings.py  health.py  images.py  models.py
openai_http/schemas/: __init__.py  chat.py  common.py  completions.py  embeddings.py  models.py
openai_http/services/: __init__.py
specs/001-openai-http-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-openai-http-api/checklists/: requirements.md
specs/001-openai-http-api/contracts/: openai-v1-api.yaml
specs/002-extensible-backend-sdk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-extensible-backend-sdk/checklists/: requirements.md
specs/002-extensible-backend-sdk/contracts/: python-api.md
specs/002-extensible-backend-sdk/examples/: myapp.py
tests/: __init__.py  _backend_fixtures.py  conftest.py
tests/contract/: __init__.py
tests/integration/: __init__.py  test_library_api.py
tests/sdk/: __init__.py  conftest.py  mock_data.py  test_501_endpoints.py  test_base.py  test_batches.py  test_chat_completions.py  test_chat_completions_async.py  test_completions.py  test_embeddings.py  test_files.py  test_fine_tuning.py  test_models.py  test_moderations.py  test_sse_contract.py  validators.py
tests/unit/: __init__.py  test_501_responses.py  test_backend_base.py  test_backend_contract.py  test_health.py  test_kvcache.py  test_library_import.py  test_mock_backend_bugfix.py  test_mock_backend_contract.py  test_parser.py  test_router_contract.py  test_validation.py
