[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-http"
dynamic = ["version"]
description = "OpenAI v1 API-compatible HTTP service backed by HuggingFace Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pillow>=11.0.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["openai_http*"]
exclude = ["tests*", "specs*"]

[tool.setuptools.dynamic]
version = { attr = "openai_http.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
cpu = [
    "torch",
    "torchvision",
]
cuda = [
    "torch",
    "torchvision",
]
app = [
    "onnxruntime-gpu",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "openai>=2.38.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda132", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda132", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]
